--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+altgraph==0.17.4
 contourpy==1.1.1
 cycler==0.12.1
 fonttools==4.57.0
+importlib-metadata==8.5.0
 importlib-resources==6.4.5
 joblib==1.4.2
 kiwisolver==1.4.7
 matplotlib==3.7.5
-numpy==1.21.4
+numpy @ file:///D:/datos_final/numpy-1.21.4-cp38-cp38-win32.whl
 packaging==25.0
-pandas==1.3.4
+pandas @ file:///D:/datos_final/pandas-1.3.4-cp38-cp38-win32.whl
+pefile==2023.2.7
 pillow==10.4.0
+pyinstaller==6.15.0
+pyinstaller-hooks-contrib==2025.8
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32-ctypes==0.2.3
 scikit-learn==0.24.2
 scipy==1.5.4
 six==1.17.0
