--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,24 @@ importlib-resources==6.4.5
 joblib==1.4.2
 kiwisolver==1.4.7
 matplotlib==3.7.5
+MouseInfo==0.1.3
 numpy @ file:///D:/datos_final/numpy-1.21.4-cp38-cp38-win32.whl
+opencv-python==4.12.0.88
 packaging==25.0
 pandas @ file:///D:/datos_final/pandas-1.3.4-cp38-cp38-win32.whl
 pefile==2023.2.7
 pillow==10.4.0
+pyautogui==0.9.54
+PyGetWindow==0.0.9
 pyinstaller==6.15.0
 pyinstaller-hooks-contrib==2025.8
+pymsgbox==1.0.9
 pyparsing==3.1.4
+pyperclip==1.9.0
+PyRect==0.2.0
+pyscreeze==1.0.1
 python-dateutil==2.9.0.post0
+pytweening==1.2.0
 pytz==2025.2
 pywin32-ctypes==0.2.3
 scikit-learn==0.24.2
