--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ joblib==1.4.2
 kiwisolver==1.4.7
 matplotlib==3.7.5
 MouseInfo==0.1.3
+mpmath==1.3.0
 numpy @ file:///D:/datos_final/numpy-1.21.4-cp38-cp38-win32.whl
 opencv-python==4.12.0.88
 packaging==25.0
@@ -29,6 +30,8 @@ pytz==2025.2
 pywin32-ctypes==0.2.3
 scikit-learn==0.24.2
 scipy==1.5.4
+seaborn==0.13.2
 six==1.17.0
+sympy==1.13.0
 threadpoolctl==3.5.0
 zipp==3.20.2
